--- a/gerador-index.html
+++ b/gerador-index.html
@@ -9,12 +9,12 @@
     
     <!-- Security Headers -->
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-    <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://generativelanguage.googleapis.com https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data: https:; connect-src 'self' https://generativelanguage.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com; frame-ancestors 'none';" />
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
-    <!-- X-Frame-Options deve ser configurado no servidor, não em meta tag -->
+    <!-- X-XSS-Protection e X-Frame-Options foram removidos conforme recomendações modernas -->
     
     <!-- Performance & Compatibility -->
-    <meta http-equiv="Cache-Control" content="public, max-age=31536000" />
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000, immutable" />
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
     <link rel="preconnect" href="https://generativelanguage.googleapis.com" />
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
